# FreeBSD-Tensorflow

./: Makefile  Makefile.MASTER_SITES  README.md  distinfo  pkg-plist
files/: bazelrc  (+11 more)
science/py-tensorflow/files/: bazelrc  patch-.bazelrc  patch-WORKSPACE  patch-bazelrc  patch-configure  patch-tensorflow_BUILD  patch-tensorflow_compiler_mlir_hlo_WORKSPACE  patch-tensorflow_compiler_mlir_lite_BUILD  patch-tensorflow_compiler_mlir_lite_quantization_BUILD  patch-tensorflow_compiler_mlir_tensorflow_BUILD  patch-tensorflow_contrib_boosted__trees_BUILD  patch-tensorflow_contrib_ignite_kernels_client_ignite__plain__client__unix.cc  patch-tensorflow_contrib_makefile_Makefile  patch-tensorflow_core_BUILD  patch-tensorflow_core_lib_png_BUILD  patch-tensorflow_core_platform_cloud_gcs__dns__cache.cc  patch-tensorflow_core_platform_default_build__config.bzl  patch-tensorflow_core_platform_posix_env.cc  patch-tensorflow_core_protobuf_autotuning.proto  patch-tensorflow_lite_experimental_micro_tools_make_targets_freebsd__makefile.inc  patch-tensorflow_lite_kernels_BUILD  patch-tensorflow_lite_kernels_internal_BUILD  patch-tensorflow_lite_toco_BUILD  patch-tensorflow_lite_tools_make_Makefile  patch-tensorflow_lite_tools_make_targets_freebsd__makefile.inc  patch-tensorflow_lite_tools_optimize_BUILD  patch-tensorflow_lite_tools_optimize_calibration_BUILD  patch-tensorflow_tensorflow.bzl  patch-tensorflow_tools_lib__package_BUILD  patch-tensorflow_tools_pip__package_BUILD  patch-tensorflow_tools_proto__text_BUILD  patch-tensorflow_workspace.bzl  patch-tensorflow_workspace2.bzl  (+14 more)
(+41 files in other folders)
