--- third_party/aws/BUILD.bazel.orig	2019-06-18 22:48:23 UTC
+++ third_party/aws/BUILD.bazel
@@ -27,7 +27,9 @@ cc_library(
         "@org_tensorflow//tensorflow:raspberry_pi_armeabi": glob([
             "aws-cpp-sdk-core/source/platform/linux-shared/*.cpp",
         ]),
-        "//conditions:default": [],
+        "//conditions:default":glob([
+            "aws-cpp-sdk-core/source/platform/linux-shared/*.cpp",
+        ]),
     }) + glob([
         "aws-cpp-sdk-core/include/**/*.h",
         "aws-cpp-sdk-core/source/*.cpp",
